syntax = "proto3";

package practice.rpc;

message LedRequest {
  bool on = 1;
}

message LedResponse {
}

message EchoRequest {
  string msg = 1;
}

message EchoResponse {
  string msg = 1;
}

service DeviceService {
  rpc SetLed(LedRequest) returns (LedResponse);
  rpc Echo(EchoRequest) returns (EchoResponse);
}
